# AMR-Project

./: .gitlab-ci.yml  README.md
AI/: Object_detection.py  (+9 more)
Embedded/: .gitignore  CMakeList.txt  CMakeLists.txt  Dockerfile  GIT_COMMIT_GUIDE.md  INSTALL.md  Makefile  PCA9685.py  PCA9685_fixed.py  README.md  System Architecture.txt  amr_real_data_sync.py  backend_mqtt_subscriber.py  docker-compose.yml  install_requirements.sh  lcd_display_controller.py  main.cpp  main.py  motor_speed_monitor.py  organize_files.py  package.xml  process_manager.py  pytest.ini  requirements.txt  run_amr.sh  sensor_data_transmitter.py  test_amr_with_ai_subscriber.py  test_backup_system.py  test_bidirectional_communication.py
Embedded/Motor_Driver_HAT_Code/: PCA9685.py  debug_connection.py  motor_control_enhanced.py  simple_motor_test.py  test_ai_motor_controller.py  test_connection.py  test_motor_simple.py
Embedded/ai/: ai_alert_publisher.py  ai_data_simulator.py  ai_file_client.py  ai_position_subscriber.py
Embedded/ai_module/: __init__.py  ai_alert_publisher.py  ai_data_simulator.py  ai_file_client.py  ai_position_subscriber.py  ai_processor.py  config.py  readme.md  requirements.txt  utils.py
Embedded/backup_module/: __init__.py  auto_backup.py  backup_config.py  backup_manager.py  readme.md
Embedded/battery_module/: README.md  battery_monitor.py
Embedded/communication_module/: __init__.py  communication_config.py  communication_manager.py  protocol_handler.py  readme.md  requirements.txt
Embedded/config/: __init__.py  ai_config.yaml  battery_config.yaml  camera_config.yaml  config_manager.py  imu_config.yaml  mosquitto.conf  motor_config.py  motor_config.yaml  mqtt_config.py  mqtt_config.yaml  nav2_params.yaml  package.xml  readme.md  robot_config.yaml  sensor_config.py  slam_params.yaml  system_config.py
Embedded/dashboard_module/: README.md  web_dashboard.py
Embedded/display/: README.md  __init__.py
Embedded/display_module/: __init__.py  display_config.py  display_manager.py  lcd_display_controller.py  led_controller.py  readme.md  requirements.txt
Embedded/docs/: CMakeLists.txt  I2C_TROUBLESHOOTING_GUIDE.md  IMU_INTEGRATION_GUIDE.md  MQTT_COMMUNICATION_GUIDE.md  README_IMU_AI_MOTOR.md  angle_control_guide.md  api_reference.md  development_guide.md  gy_bn008x_imu_motor_integration_guide.md  i2c_troubleshooting_guide.md  imu_angle_control_guide.md  imu_obstacle_detection_guide.md  imu_rotation_detection_guide.md  mqtt_communication_guide.md  project_overview.md  readme.md  readme_imu_ai_motor.md
Embedded/include/: readme.md
Embedded/include/amr/: angle_controller.h  backend_ws_client.h  backup_manager.h  gpio_interface.h  imu_motor_integration.h  imu_sensor.h  led_driver.h  level_controller.h  lidar_sensor.h  motor_cmd_interface.h  motor_driver.h  obstacle_detector.h  pwn_interface.h  sensor_data_sync.h  state_machine.h
Embedded/launch/: amr_robot_launch.py  main.py  readme.md  run_amr.py
Embedded/main/: README.md  __init__.py  amr_real_data_sync.py
Embedded/motor_control/: PCA9685.py  README.md  README_manual_control.md  README_simple_manual.md  __init__.py  ai_server_auto.py  amr_motor_controller.py  amr_motor_system.py  imu_ai_motor_controller.py  manual_keyboard_controller.py  real_motor_controller.py  real_motor_controller_fixed.py  servo_motor_controller.py  simple_manual_controller.py  test_ai_embedded.py  test_connection.py  test_manual_control.py  test_simple_manual.py
Embedded/motors/: PCA9685.py  __init__.py  ai_motor_controller.py  amr_motor_controller.py  integrated_motor_control.py  motor_control_enhanced.py  readme.md  requirements.txt  servo_motor_controller.py
Embedded/mqtt/: README.md  __init__.py  ai_mqtt_client.py  backend_mqtt_subscriber.py  mqtt_manager.py  periodic_status_sender.py  sensor_data_transmitter.py
Embedded/mqtt_module/: __init__.py  ai_mqtt_client.py  backend_mqtt_subscriber.py  base_mqtt_client.py  mqtt_manager.py  periodic_status_sender.py  readme.md  requirements.txt  sensor_data_transmitter.py
Embedded/ros2/: README.md  __init__.py  ai_position_subscriber.py
Embedded/ros2_module/: __init__.py  ai_position_subscriber.py  readme.md  requirements.txt
Embedded/security/: FIRMWARE_SECURITY_GUIDE.md  SECURITY_GUIDE.md  firewall_rules.sh  firmware_api.py  firmware_security.py  mqtt_acls.txt  mqtt_passwords.txt  requirements.txt  secure_mqtt_client.py  security_manager.py
Embedded/sensor_sync/: __init__.py  sensor_data_sync.py
Embedded/sensors/: __init__.py  readme.md  requirements.txt
Embedded/slam/: visual_lidar_slam_node.cpp
Embedded/src/: README.md  angle_controller.cpp  backend_ws_client.cpp  backup_manager.cpp  imu_motor_integration.cpp  imu_sensor.cpp  led_driver.cpp  lidar_sensor.cpp  main.cpp  motor_cmd_interface.cpp  motor_driver.cpp  obstacle_detector.cpp  sensor_data_sync.cpp
Embedded/src/battery/: battery_publisher.cpp
Embedded/systemd/: README.md  amr-system.service
Embedded/tests/: README.md  README_motor_servo_test.md  __init__.py  ai_communication_test.py  angle_control_test.py  imu_sensor_test.py  motor_servo_simple_test.py  motor_servo_simultaneous_test.py  motor_test.cpp  mqtt_test.py  obstacle_detection_test.py  requirements.txt  requirements_motor_servo.txt  rotation_detection_test.py  run_motor_servo_test.py  run_tests.py  servo_test_simple.py  test_ai_file.py  test_ai_file_client.py  test_ai_http.py  test_ai_mqtt_client.py  test_ai_mqtt_receiver.py  test_backend_mqtt_subscriber.py  test_center_simple.py  test_command_api.py  test_connection_setup.py  test_imu_ai_simple.py  test_imu_motor_simple.py  test_imu_only.py  test_mqtt_manager.py  test_other_i2c_devices.py  test_sensor_data_transmitter.py
Embedded/utilities/: __init__.py  build_imu_motor.sh  enable_i2c_orin.sh  exceptions.py  install_requirements.sh  logger.py  readme.md  requirements.txt  run_sensor_sync.sh  setup_env.sh
Embedded/utils/: README.md  __init__.py  check_i2c_channels.py  diagnose_imu_orin.py  logger.py  organize_files.py  run_sensor_sync.sh  setup_env.sh  test_bidirectional_communication.py  test_servo_motors.py
(+549 files in other folders)
