<?xml version="1.0"?>
<package format="3">
  <name>amr_project</name>
  <version>0.1.0</version>
  <description>Autonomous Mobile Robot System with SLAM, LiDAR, Battery, Nav2, and Camera</description>

  <maintainer email="이메일">이름</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>OpenCV</build_depend>
  <build_depend>nav2_msgs</build_depend>
  <build_depend>rclcpp_action</build_depend>

  <!-- Run dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>OpenCV</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>rclcpp_action</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
